--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,3 +8,9 @@ services:
       - .:/code
     ports:
       - 8000:8000
+#   db:
+#     image: postgres
+#     environment:
+#       - POSTGRES_DB=${DB_NAME}
+#       - POSTGRES_USER=${USER_NAME}
+#       - POSTGRES_PASSWORD=${DB_PASSWORD}
